--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,6 @@ spring.servlet.multipart.max-request-size=10MB
 
 server.ssl.enabled=true
 server.ssl.key-store=classpath:keystore.p12
-server.ssl.key-store-password=${DB_PASSWORD}
+server.ssl.key-store-password=${PGPASSWORD}
 server.ssl.key-store-type=PKCS12
 server.ssl.key-alias=fupkey
